--- a/index.html
+++ b/index.html
@@ -4,12 +4,78 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Palak Tripathi</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-</head>
+  <style>
+  table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
 
-<body>
-  Hello world
+  td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
+
+  tr:nth-child(even) {
+    background-color: #dddddd;
+  }
+  </style>
+</head>
+<!-- This is my first comment -->
+<body style="background-color:powderblue;">
+  <center>
+  <h2>Palak Tripathi</h2>
+    <br>
+    <img src="download1.jpeg"  width="150" >
+  <p>Welcome to my Portfolio Website. I have over 2 years of work experience in Banking and Finance. I have also worked as an accountant at Credit Suisse for over a year. I have completed my Masters from the University of Mumbai and have also cleared 7/13 papers of the UK ACCA. I have experience in auditing as well as financial reporting.I'm passionate about learning more as an accountant as well as integrating my knowledge in data analysis. </p>
+<br>
+    <br>
+  <a href="index.html"><button>Home</button></a>
+  <a href="Education.html"><button>Education</button></a>
+  <a href="Experience.html"><button>Experience</button></a>
+  <a href="Skills.html"><button>Skills</button></a>
+  <a href="Licenses.html"><button>Licenses</button></a>
+<br>
+    <br>
+    <img src="download1.jpeg" width="40">
+    <br>
+   <a href="https://www.linkedin.com/in/venus-patel-1601b7289/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Click Here to go to my linkedIn</a>
+    <br>
+    <br>
+    <a href="docs/resume.pdf">Click to Download my resume</a>
+    <br>
+    <br>
+    <table>
+      <tr>
+        <th>Language</th>
+        <th>Expertise</th>
+        <th>Experience</th>
+      </tr>
+      <tr>
+        <td>Python</td>
+        <td>1</td>
+        <td>10 years</td>
+      </tr>
+      <tr>
+        <td>SQL</td>
+        <td>4</td>
+        <td>7 years</td>
+      </tr>
+
+     <tr> 
+    <td>Html</td>
+    <td>1</td>
+    <td>5 Year</td>
+    </tr>
+
+    </table>
+    <br>
+    <br>
+
+    </center>
   <script src="script.js"></script>
 </body>
 
