Made changes to the commit

--- a/Education.html
+++ b/Education.html
@@ -11,10 +11,10 @@
 <body>
   <center>
   <h2>Education</h2>
-    <p>1.Post Graduate Diploma in Professional Accounting Practice
-      2.Masters of Commerce
-      3.Bachelors of Commerce
-      4.ICAI Inter Ca cleared
+    <p>1.Post Graduate Diploma in Professional Accounting Practice<br>
+      2.Masters of Commerce<br>
+      3.Bachelors of Commerce<br>
+      4.ICAI Inter Ca cleared<br>
       5. 7/13 UK ACCA Cleared</p>
 
 
