--- a/Experience.html
+++ b/Experience.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Venus Patel</title>
+  <title>Palak Tripathi</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <center>
-  <h2> Currently, working at Mcdonald's as a Team Lead
-     Worked as a Trust Accountant at Credit Suisse under the   Trust Accounting Branch.
-    1.5 years of experience as a Customer Service Representative at Citibank India
+  <h2> 1.Currently, working at Mcdonald's as a Team Lead<br>
+       2.Worked as a Trust Accountant at Credit Suisse under the           Trust Accounting Branch.<br>
+       3.1.5 years of experience as a Customer Service                     Representative at Citibank India
  </h2>
 
 
