--- a/Licenses.html
+++ b/Licenses.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Venus Patel</title>
+  <title>Palak Tripathi</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <center>
-  <h2>UK ACCA certified
+  <h2>UK ACCA certified<br>
   Ca India ICAI</h2>
 
     <a href="index.html"><button>Home</button></a>
