--- a/index.html
+++ b/index.html
@@ -7,75 +7,83 @@
   <title>Palak Tripathi</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <style>
-  table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
+    table {
+      font-family: arial, sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+    }
 
-  td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-  }
+    td,
+    th {
+      border: 1px solid #dddddd;
+      text-align: left;
+      padding: 8px;
+    }
 
-  tr:nth-child(even) {
-    background-color: #dddddd;
-  }
+    tr:nth-child(even) {
+      background-color: #dddddd;
+    }
   </style>
 </head>
 <!-- This is my first comment -->
-<body style="background-color:powderblue;">
+
+<body style="background-color:lightseagreen">
   <center>
-  <h2>Palak Tripathi</h2>
+    <h2>Palak Tripathi</h2>
     <br>
-    <img src="download1.jpeg"  width="150" >
-  <p>Welcome to my Portfolio Website. I have over 2 years of work experience in Banking and Finance. I have also worked as an accountant at Credit Suisse for over a year. I have completed my Masters from the University of Mumbai and have also cleared 7/13 papers of the UK ACCA. I have experience in auditing as well as financial reporting.I'm passionate about learning more as an accountant as well as integrating my knowledge in data analysis. </p>
-<br>
+    <img src="download1.jpeg" width="150">
+    <p>Welcome to my Portfolio Website. I have over 2 years of work experience in Banking and Finance. I have also
+      worked as an accountant at Credit Suisse for over a year. I have completed my Masters from the University of
+      Mumbai and have also cleared 7/13 papers of the UK ACCA. I have experience in auditing as well as financial
+      reporting.I'm passionate about learning more as an accountant as well as integrating my knowledge in data
+      analysis. </p>
     <br>
-  <a href="index.html"><button>Home</button></a>
-  <a href="Education.html"><button>Education</button></a>
-  <a href="Experience.html"><button>Experience</button></a>
-  <a href="Skills.html"><button>Skills</button></a>
-  <a href="Licenses.html"><button>Licenses</button></a>
-<br>
+    <br>
+    <a href="index.html"><button>Home</button></a>
+    <a href="Education.html"><button>Education</button></a>
+    <a href="Experience.html"><button>Experience</button></a>
+    <a href="Skills.html"><button>Skills</button></a>
+    <a href="Licenses.html"><button>Licenses</button></a>
+    <br>
     <br>
     <img src="download1.jpeg" width="40">
     <br>
-   <a href="https://www.linkedin.com/in/venus-patel-1601b7289/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Click Here to go to my linkedIn</a>
+    <a
+      href="https://www.linkedin.com/in/venus-patel-1601b7289/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Click
+      Here to go to my linkedIn</a>
     <br>
     <br>
-    <a href="docs/resume.pdf">Click to Download my resume</a>
+    <a href="Palak T.pdf">Click to Download my resume</a>
     <br>
     <br>
     <table>
       <tr>
-        <th>Language</th>
-        <th>Expertise</th>
-        <th>Experience</th>
+        <th>Skill</th>
+        <th>Proficiency Level</th>
+        <th>Years of Experience</th>
       </tr>
       <tr>
         <td>Python</td>
-        <td>1</td>
-        <td>10 years</td>
+        <td>Beginner</td>
+        <td>1 year</td>
       </tr>
       <tr>
-        <td>SQL</td>
-        <td>4</td>
-        <td>7 years</td>
+        <td>HTML And CSS</td>
+        <td>Beginner</td>
+        <td>1 year</td>
       </tr>
 
-     <tr> 
-    <td>Html</td>
-    <td>1</td>
-    <td>5 Year</td>
-    </tr>
+      <tr>
+        <td>SQL</td>
+        <td>Intermediate</td>
+        <td>2 years</td>
+      </tr>
 
     </table>
     <br>
     <br>
 
-    </center>
+  </center>
   <script src="script.js"></script>
 </body>
 
